comercio por id
